fixed resume shifting

--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ html {
 .collapse {
   /*background-color: rgb(235, 239, 255);*/
   color: rgb(103, 101, 255);
-  height: 160%;
+  height: 100%;
   cursor: pointer;
   padding: 20px;
   width: 100%;
@@ -328,12 +328,14 @@ html {
   text-align: left;
   outline: none;
   font-size: 15px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 .resumecenter {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: auto;
+  margin-bottom: 0px;
 }
 .gif {
   max-width: 100%;
